# pdf-to-musica

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: make_sample_pdf.py
src/pdf_to_musica/: __init__.py  cli.py  converter.py
tests/: test_pdf_to_musica.py
