[project]
name = "pdf-to-musica"
version = "0.2.0"
description = "Convert sheet music PDFs to compressed MusicXML .mxl using Audiveris OMR."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PDF to Musica" }]
license = "MIT"
dependencies = [
  "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pdf-to-musica = "pdf_to_musica.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_to_musica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
